2013-12-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (comm_send_preferences): Remove server_info preferences as
	they have no use for the manager. Do not send scanner-side only
	preferences which are prefixed with sys_.

2013-12-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* INSTALL: Drop step 1.2 about rules file and make an
	extended version of 1.1 to item 2, adapting subsequent enumeration.

	* doc/openvassd.rules: Removed. rules are now configured via
	openvassd.conf.

2013-12-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginload.h (plugin_init_t, plugin_run_t) Removed these
	typedefs since they are not used anymore.

2013-12-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: Remove module, added missing one and fixed a license.

2013-12-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (launch_plugin): Adjust plugin_launch function call.

	* src/nasl_plugins.c (nasl_plugin_init): Remove unused function.
	(nasl_plugin_class): Remove unused structure.

	* src/pluginlaunch.c (plugin_launch): Remove launcher argument as only
	nasl_plugin_launch is used now.

	* src/pluginlaunch.h: Add and adjust function prototypes adequately.

	* src/pluginload.c (plugin_classes): Remove unused variable.
	(init_plugin_classes): Delete unused function.
	(collect_nvts): Don't iterate over plugin classes as only .nasl plugins
	are supported.
	(plugins_reload_from_dir): Remove init_plugin_classes call. Don't
	iterate over plugins classes as only .nasl plugins are supported.

	* src/pluginload.h: Add function prototype and remove pl_class_s struct.
	Delete externs.

2013-12-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/oval_plugins.c: Delete file.

	* src/CMakeLists.txt: Don't build deleted file.

	* src/pluginload.c (init_plugin_classes): Remove oval plugin class from
	plugins classes list.

2013-11-21  Michael Wiegand <michael.wiegand@greenbone.net>
