@@ -314,3 +314,30 @@ wait_for_children1 ()
     }
   while ((e > 0 || errno == EINTR) && n < 20);
 }
+
+/*
+ * @brief Checks if a provided preference is scanner-only and can't be
+ * read/written by the client.
+ *
+ * @return 1 if pref is scanner-only, 0 otherwise.
+ */
+int
+is_scanner_only_pref (const char *pref)
+{
+  if (pref == NULL)
+    return 0;
+  if (!strcmp (pref, "logfile") || !strcmp (pref, "config_file")
+      || !strcmp (pref, "plugins_folder")
+      || !strcmp (pref, "dumpfile")
+      || !strcmp (pref, "negot_timeout")
+      || !strcmp (pref, "force_pubkey_auth")
+      || !strcmp (pref, "log_while_attack")
+      || !strcmp (pref, "ca_file") || !strcmp (pref, "key_file")
+      || !strcmp (pref, "cert_file") || !strcmp (pref, "be_nice")
+      || !strcmp (pref, "log_plugins_name_at_load")
+      || !strcmp (pref, "nasl_no_signature_check")
+      /* Preferences starting with sys_ are scanner-side only. */
+      || !strncmp (pref, "sys_", 4))
+    return 1;
+  return 0;
+}
